--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -5,21 +5,14 @@ ja:
       minimum_characters: 'は5文字以上で入力してください'
   defaults:
     login: 'ログイン'
-    logout: 'ログアウト'
-    update: '更新する'
     delete: '削除'
     edit: '編集'
     show: '詳細'
-    search: '検索'
-    submit: '送信'
-    back: '戻る'
-    update_at: '作成日時'
-    report_page: '間違いにお気づきの方はこちらから'
-    show_page: '私物一覧はこちらから'
-    line_page: 'LINE追加はこちらから'
+    search: 'search'
     no_result: '該当する記事がありません'
+    confirm_delete: '削除しますか？'
   flash:
-    deleted: "削除しました"
+    deleted: "記事を削除しました"
     updated: "記事を更新しました"
     not_updated: "記事を更新できませんでした"
     login: 'ログインしました'
@@ -28,35 +21,58 @@ ja:
     before_login: 'ログインしてください'
     make_report: 'ありがとうございます。コメントが送信されました。'
     not_make_report: 'コメントを入力してから送信してください。'
+  layouts:
+    header:
+      home: 'HOME'
+      line: 'LINE'
+      report: 'REPORT'
+      item: 'ITEM'
+      admins_report: 'Admins/REPORT'
+      admins_item: 'Admins/ITEM'
+      logout: 'ログアウト'
+      search: 'Search'
   articles:
+    home:
+      all_item: 'ALL ITEM'
+      view_more: 'VIEW MORE'
+      line_btn: 'for LINE PAGE'
     index:
-      title: '記事一覧'
-      to_show_page: '詳細ページへ'
+      title: 'ITEM PAGE'
     show:
-      title: "#{@name}さんの私物詳細ページ"
       to_twitter: '詳しくはTweetをご覧ください'
+    line:
+      title: 'LINE PAGE'
+      st: 'ST'
+      yugo: 'KY'
+      taiga: 'KT'
+      juri: 'TJ'
+      hokuto: 'MH'
+      jesse: '　J　'
+      shintaro: 'MS'
   reports:
     new:
       title: 'REPORT'
+      submit: '送信'
   admins:
     sessions:
       new:
-        title: '管理者ログインページ'
-        login: 'ログイン'
-        email: 'メールアドレス'
-        password: 'パスワード'
+        title: 'LOGIN PAGE'
     reports:
       index:
-        comment: '報告内容'
+        title: 'Admins/REPORT'
+        content: '報告内容'
         date: '報告日時'
-        delete: '削除ボタン'
     articles:
+      index:
+        title: 'Admins/ITEM'
       form:
         member: '着用メンバー'
         brand: 'ブランド'
         image: '画像枚数'
         date: '更新日時'
         status: '公開状況'
-        no_result: '該当する記事がありません'
       edit:
+        title: 'Admins/Edit'
         image_comment: '現在登録されている画像(削除する場合はチェックしてください)'
+        update: '更新する'
+
