--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -1,19 +1,16 @@
 ja:
   activerecord:
     models:
-      user: 'ユーザー'
-      article: '記事'
-      member: 'メンバー'
-      report: '報告'
+      member: 'Member'
+      report: 'REPORT'
     attributes:
         article:
-          id: 'ID'
-          price: '値段'
-          brand: 'ブランド'
-          item: 'アイテム'
-          twitter_url: 'TwitterへのURL'
-          image: '画像'
+          brand: 'Brand'
           member: 'メンバー'
+          twitter_url: 'TwitterへのURL'
+        member:
+          email: 'メールアドレス'
+          password: 'パスワード'
   enums:
     user:
       role:
