Improve:FB_5_css変更

--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -39,10 +39,10 @@ ja:
     index:
       title: 'ITEM PAGE'
     show:
-      to_twitter: '詳しくはTweetをご覧ください'
+      to_twitter: '詳しくはTwitterへ'
     line:
       title: 'LINE PAGE'
-      st: 'ST'
+      st: 'ALL'
       yugo: 'KY'
       taiga: 'KT'
       juri: 'TJ'
